--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
 }
 
 dependencies {
+  compile 'commons-cli:commons-cli:1.2'
   compile 'com.google.guava:guava:16.0.1'
   compile 'com.spectralogic:ds3_java_sdk:0.1.6-SNAPSHOT'
   testCompile 'com.googlecode.jmockit:jmockit:1.4'
