--- a/build.gradle
+++ b/build.gradle
@@ -13,12 +13,15 @@
  * ****************************************************************************
  */
 
+import java.nio.file.Files
+import java.nio.file.Path
+
 apply plugin: 'java'
 apply plugin: 'maven'
 apply plugin: 'idea'
 apply plugin: 'application'
 
-version = '0.0.4-SNAPSHOT'
+version = '0.0.5-SNAPSHOT'
 group = 'com.spectralogic'
 
 mainClassName = 'com.spectralogic.ds3cli.Main'
@@ -37,6 +40,21 @@ dependencies {
   testCompile 'junit:junit:4.11'
 }
 
+task genConfigProperties << {
+    File configFile = new File(sourceSets.main.output.resourcesDir, "/config.properties")
+    Path configPath = sourceSets.main.output.resourcesDir.toPath()
+    if (!Files.exists(configPath)) {
+        Files.createDirectories(configPath)
+    }
+
+    configFile.withWriter{out ->
+        out.writeLine("version="+version)
+        out.writeLine("build.date="+new Date().toString())
+    }
+}
+
+jar.dependsOn genConfigProperties
+
 task wrapper(type: Wrapper) {
-  gradleVersion = '1.11'
+  gradleVersion = '2.0'
 }
