--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,21 +1,6 @@
-#
-# *******************************************************************************
-#   Copyright 2014 Spectra Logic Corporation. All Rights Reserved.
-#   Licensed under the Apache License, Version 2.0 (the "License"). You may not use
-#   this file except in compliance with the License. A copy of the License is located at
-#
-#   http://www.apache.org/licenses/LICENSE-2.0
-#
-#   or in the "license" file accompanying this file.
-#   This file is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
-#   CONDITIONS OF ANY KIND, either express or implied. See the License for the
-#   specific language governing permissions and limitations under the License.
-# *****************************************************************************
-#
-
-#Fri Mar 14 13:49:44 MDT 2014
+#Wed Jul 02 13:00:09 MDT 2014
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=http\://services.gradle.org/distributions/gradle-1.11-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-2.0-all.zip
