--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,10 @@
 import java.nio.file.Files
 import java.nio.file.Path
 
+plugins {
+    id "com.github.hierynomus.license" version "0.11.0"
+}
+
 apply plugin: 'java'
 apply plugin: 'maven'
 apply plugin: 'idea'
