Updating the build to pull the ds3-sdk from the github repo.

--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ apply plugin: 'maven'
 apply plugin: 'idea'
 apply plugin: 'application'
 
-version = '0.7.5-SNAPSHOT'
+version = '0.7.7-SNAPSHOT'
 group = 'com.spectralogic'
 
 mainClassName = 'com.spectralogic.ds3cli.Main'
@@ -33,13 +33,16 @@ mainClassName = 'com.spectralogic.ds3cli.Main'
 repositories {
   mavenCentral()
   mavenLocal()
+  maven {
+    url 'https://spectralogic.github.io/java/repository'
+  }
 }
 
 dependencies {
   compile fileTree(dir: 'lib', include: '*.jar')
   compile 'commons-cli:commons-cli:1.2'
   compile 'com.google.guava:guava:16.0.1'
-  compile 'com.spectralogic:ds3_java_sdk:0.7.5-SNAPSHOT'
+  compile 'com.spectralogic.ds3:ds3-sdk:0.7.7-SNAPSHOT'
   testCompile 'com.googlecode.jmockit:jmockit:1.4'
   testCompile 'junit:junit:4.11'
 }
