Add views.json::GetServiceView fix Arguments parsing of output-format param
first JSON print of get_service!
{
  "Owner" : {
    "ID" : "spectra",
    "DisplayName" : "spectra"
  },
  "Buckets" : [ {
    "Name" : "test_DM",
    "CreationDate" : "2015-01-21T17:58:01.000Z"
  } ]
}

--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,11 @@ dependencies {
   compile 'commons-cli:commons-cli:1.2'
   compile 'com.google.guava:guava:16.0.1'
   compile 'com.spectralogic.ds3:ds3-sdk:0.7.7-SNAPSHOT'
+  compile (
+    [group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.5.0'],
+    [group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.5.0'],
+    [group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.5.0']
+  )
   testCompile 'com.googlecode.jmockit:jmockit:1.4'
   testCompile 'junit:junit:4.11'
 }
