--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ apply plugin: 'maven'
 apply plugin: 'idea'
 apply plugin: 'application'
 
-version = '1.1.7'
+version = '1.2.0'
 group = 'com.spectralogic'
 
 mainClassName = 'com.spectralogic.ds3cli.Main'
@@ -35,7 +35,7 @@ repositories {
   jcenter()
   mavenLocal()
   maven {
-    url 'https://spectralogic.github.io/java/repository'
+    url 'http://dl.bintray.com/spectralogic/ds3'
   }
 }
 
