Updated build to reflect name change

--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ subprojects {
 
 project(':ds3-cli-integration') {
     dependencies {
-        compile project(':ds3-cli')
+        compile project(':ds3_java_cli')
     }
 }
 
