--- a/build.gradle
+++ b/build.gradle
@@ -37,10 +37,9 @@ subprojects {
         compile 'ch.qos.logback:logback-core:1.0.13'
         compile 'ch.qos.logback:logback-classic:1.0.13'
         compile 'com.google.guava:guava:18.0'
-        compile 'com.spectralogic.ds3:ds3-sdk:1.2.0-RC2'
+        compile 'com.spectralogic.ds3:ds3-sdk:1.2.2'
         testCompile "org.mockito:mockito-core:1.+"
         testCompile 'junit:junit:4.11'
-
     }
 }
 
