--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,8 @@ subprojects {
         compile 'com.spectralogic.ds3:ds3-sdk:1.2.2'
         testCompile "org.mockito:mockito-core:1.+"
         testCompile 'junit:junit:4.11'
+        testCompile "org.powermock:powermock-api-mockito:1.6.2"
+        testCompile "org.powermock:powermock-module-junit4:1.6.2"
     }
 }
 
