Updating config file name to avoid naming conflicts

--- a/ds3_java_cli/build.gradle
+++ b/ds3_java_cli/build.gradle
@@ -32,7 +32,7 @@ dependencies {
 }
 
 task genConfigProperties << {
-    File configFile = new File(sourceSets.main.output.resourcesDir, "/config.properties")
+    File configFile = new File(sourceSets.main.output.resourcesDir, "/ds3_cli.properties")
     Path configPath = sourceSets.main.output.resourcesDir.toPath()
     if (!Files.exists(configPath)) {
         Files.createDirectories(configPath)
