--- a/build.gradle
+++ b/build.gradle
@@ -38,10 +38,10 @@ subprojects {
         compile 'ch.qos.logback:logback-classic:1.0.13'
         compile 'com.google.guava:guava:18.0'
         compile 'com.spectralogic.ds3:ds3-sdk:1.2.3'
-        testCompile "org.mockito:mockito-core:1.+"
-        testCompile 'junit:junit:4.11'
-        testCompile "org.powermock:powermock-api-mockito:1.6.2"
-        testCompile "org.powermock:powermock-module-junit4:1.6.2"
+        testCompile "org.mockito:mockito-core:1.10.19"
+        testCompile 'junit:junit:4.12'
+        testCompile "org.powermock:powermock-api-mockito:1.6.4"
+        testCompile "org.powermock:powermock-module-junit4:1.6.4"
     }
 }
 
