--- a/build.gradle
+++ b/build.gradle
@@ -38,8 +38,12 @@ subprojects {
         compile 'ch.qos.logback:logback-classic:1.1.3'
         compile 'com.google.guava:guava:19.0'
         compile 'com.spectralogic.ds3:ds3-sdk:1.2.5'
-        testCompile "org.mockito:mockito-core:1.10.19"
+        testCompile ('org.mockito:mockito-core:1.10.19') {
+            exclude group: 'org.hamcrest'
+        }
+
         testCompile 'junit:junit:4.12'
+        testCompile 'org.hamcrest:hamcrest-library:1.3'
         testCompile "org.powermock:powermock-api-mockito:1.6.4"
         testCompile "org.powermock:powermock-module-junit4:1.6.4"
     }
