--- a/ds3_java_cli/build.gradle
+++ b/ds3_java_cli/build.gradle
@@ -24,7 +24,9 @@ dependencies {
     compile (
       [group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.6.4'],
       [group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.6.4'],
-      [group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.6.4']
+      [group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.6.4'],
+      [group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-guava', version: '2.6.4']
+
     )
     compile 'commons-cli:commons-cli:1.2'
     compile 'joda-time:joda-time:2.9.1'
