--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@
 
 
 allprojects {
-    version = '3.0.0-SNAPSHOT'
+    version = '3.0.0'
     group = 'com.spectralogic'
 }
 
@@ -34,10 +34,10 @@ subprojects {
     }
 
     dependencies {
-        compile 'ch.qos.logback:logback-core:1.1.3'
-        compile 'ch.qos.logback:logback-classic:1.1.3'
+        compile 'ch.qos.logback:logback-core:1.1.6'
+        compile 'ch.qos.logback:logback-classic:1.1.6'
         compile 'com.google.guava:guava:19.0'
-        compile 'com.spectralogic.ds3:ds3-sdk:3.0.0-RC2'
+        compile 'com.spectralogic.ds3:ds3-sdk:3.0.0-RC3'
         testCompile ('org.mockito:mockito-core:1.10.19') {
             exclude group: 'org.hamcrest'
         }
