Adding a fix to correct an issue where sync will fail one unique timezones

--- a/ds3_java_cli/build.gradle
+++ b/ds3_java_cli/build.gradle
@@ -47,3 +47,9 @@ task genConfigProperties << {
 }
 
 jar.dependsOn genConfigProperties
+
+run {
+    if(project.hasProperty('args')){
+        args project.args.split('\\s')
+    }
+}
