Clean up quotes and semicolons

--- a/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
+++ b/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
@@ -73,7 +73,7 @@ PUT_BULK = Put multiple objects from a directory or pipe into a bucket.\n\
         Optional '--ignore-errors' flag to continue on errors.\n\
         Optional '--follow-symlinks' flag to follow symlink (default is disregard).
 
-DELETE_TAPE_DRIVE = "Deletes the specified offline tape drive.\n\
+DELETE_TAPE_DRIVE = Deletes the specified offline tape drive.\n\
         This request is useful when a tape drive is permanently removed from a partition.\n\
         Requires the '-i' parameter to specify tape drive ID.\n\n\
         Use the get_tape_drives command to retrieve a list of tapes.
@@ -87,16 +87,15 @@ DELETE_TAPE_PARTITION = Deletes the specified offline tape partition from the Bl
 
 GET_JOBS = Retrieves a list of all current jobs.
 
-GET_JOB = 
-        Retrieves information about a current job.\n\
+GET_JOB = Retrieves information about a current job.\n\
         Requires the '-i' parameter with the UUID of the job\n\
-        \nUse the get_jobs command to retrieve a list of jobs.";
+        \nUse the get_jobs command to retrieve a list of jobs.
 
 DELETE_JOB = 
         Terminates and removes a current job.\n\
         Requires the '-i' parameter with the UUID of the job\n\
         Use the '--force' flag to remove objects already loaded into cache.\n\n\
-        Use the get_jobs command to retrieve a list of jobs.";
+        Use the get_jobs command to retrieve a list of jobs.
 
 SYSTEM_INFORMATION = Retrieves basic system information: software version, build, and system serial number.\n\
         Useful to test communication.
@@ -179,7 +178,7 @@ MODIFY_USER = Alters information about an individeual user.\n\
 
 GET_OBJECTS_ON_TAPE = Returns a list of the contents of a single tape.\n\
         Requires the '-i' parameter to specify tape (barcode or UUID).\n\n\
-        Use the get_tapes command to retreive a list of tapes";
+        Use the get_tapes command to retreive a list of tapes;
 
 
 
