Clean up linefeeds and semicolons

--- a/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
+++ b/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
@@ -88,11 +88,10 @@ DELETE_TAPE_PARTITION = Deletes the specified offline tape partition from the Bl
 GET_JOBS = Retrieves a list of all current jobs.
 
 GET_JOB = Retrieves information about a current job.\n\
-        Requires the '-i' parameter with the UUID of the job\n\
-        \nUse the get_jobs command to retrieve a list of jobs.
+        Requires the '-i' parameter with the UUID of the job\n\n\
+        Use the get_jobs command to retrieve a list of jobs.
 
-DELETE_JOB = 
-        Terminates and removes a current job.\n\
+DELETE_JOB = Terminates and removes a current job.\n\
         Requires the '-i' parameter with the UUID of the job\n\
         Use the '--force' flag to remove objects already loaded into cache.\n\n\
         Use the get_jobs command to retrieve a list of jobs.
@@ -106,7 +105,7 @@ HEAD_OBJECT = Returns metadata but does not retrieves an object from a bucket.\n
         Useful to determine if an object exists and you have permission to access it.
 
 DELETE_FOLDER = Deletes a folder and all its contents.\n\
-        Requires the '-b' parameter to specify bucket (name or UUID).
+        Requires the '-b' parameter to specify bucket (name or UUID).\n\
         Requires the '-d' parameter to specify folder name.
 
 PUT_JOB = Modify the priority or the start date of a job that is in process.\n\
@@ -178,7 +177,7 @@ MODIFY_USER = Alters information about an individeual user.\n\
 
 GET_OBJECTS_ON_TAPE = Returns a list of the contents of a single tape.\n\
         Requires the '-i' parameter to specify tape (barcode or UUID).\n\n\
-        Use the get_tapes command to retreive a list of tapes;
+        Use the get_tapes command to retreive a list of tapes.
 
 
 
