--- a/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
+++ b/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
@@ -179,7 +179,7 @@ GET_OBJECTS_ON_TAPE = Returns a list of the contents of a single tape.\n\
         Requires the '-i' parameter to specify tape (barcode or UUID).\n\n\
         Use the get_tapes command to retreive a list of tapes.
 
-RECLIAM_CACHE = Forces a full reclaim of all caches, and waits until \n\
+RECLAIM_CACHE = Forces a full reclaim of all caches, and waits until \n\
         the reclaim completes. Cache contents that need to be retained \n\
         because they are a part of an active job are retained. Any cache \n\
         contents that can be reclaimed will be. This operation may take a \n\
