code inspection: finals, typos, &c.

--- a/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
+++ b/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
@@ -140,7 +140,7 @@ GET_TAPE_FAILURE = Returns a list of tape failures.
 
 DELETE_TAPE_FAILURE = Deletes a tape failure from the failure list.\n\
         Requires the '-i' parameter to specify tape failure ID (UUID).\n\n\
-        Use the get_tape_failure command to retreive a list of IDs.
+        Use the get_tape_failure command to retrieve a list of IDs.
 
 GET_SERVICE = Returns a list of buckets on the device.
 
@@ -160,24 +160,24 @@ MODIFY_DATA_POLICY = Alter parameters for the specified data policy..\n\
             default_put_job_priority, default_verify_job_priority, rebuild_priority, \n\
             end_to_end_crc_required, versioning.\n\
         See API documentation for possible values).\n\n\
-        Use the get_data_policies command to retreive a list of policies and current values.
+        Use the get_data_policies command to retrieve a list of policies and current values.
 
-GET_USER = Returns information about an individeual user.\n\
+GET_USER = Returns information about an individual user.\n\
         Requires the '-i' parameter to specify user (name or UUID).\n\n\
-        Use the get_users command to retreive a list of users.
+        Use the get_users command to retrieve a list of users.
 
 GET_USERS = Returns a list of all users.
 
-MODIFY_USER = Alters information about an individeual user.\n\
+MODIFY_USER = Alters information about an individual user.\n\
          Requires the '-i' parameter to specify user (name or UUID).\n\
          Requires the '--modify-params' parameter to be set.\n\
          Use key:value pair key:value,key2:value2:... Legal values:\n\
              default_data_policy_id\n\n\
-         Use the get_users command to retreive a list of users.
+         Use the get_users command to retrieve a list of users.
 
 GET_OBJECTS_ON_TAPE = Returns a list of the contents of a single tape.\n\
         Requires the '-i' parameter to specify tape (barcode or UUID).\n\n\
-        Use the get_tapes command to retreive a list of tapes.
+        Use the get_tapes command to retrieve a list of tapes.
 
 RECLAIM_CACHE = Forces a full reclaim of all caches, and waits until \n\
         the reclaim completes. Cache contents that need to be retained \n\
