--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@
 
 
 allprojects {
-    version = '3.0.0-RC6'
+    version = '3.0.1'
     group = 'com.spectralogic'
 }
 
@@ -37,7 +37,7 @@ subprojects {
         compile 'ch.qos.logback:logback-core:1.1.6'
         compile 'ch.qos.logback:logback-classic:1.1.6'
         compile 'com.google.guava:guava:19.0'
-        compile 'com.spectralogic.ds3:ds3-sdk:3.0.3'
+        compile 'com.spectralogic.ds3:ds3-sdk:3.0.4'
         testCompile ('org.mockito:mockito-core:1.10.19') {
             exclude group: 'org.hamcrest'
         }
@@ -56,5 +56,5 @@ project(':ds3-cli-integration') {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.11'
+    gradleVersion = '2.14'
 }
