Update help, code cleanup, add Platform info to output

--- a/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
+++ b/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
@@ -185,3 +185,16 @@ RECLAIM_CACHE = Forces a full reclaim of all caches, and waits until \n\
         contents that can be reclaimed will be. This operation may take a \n\
         very long time to complete, depending on how much of the cache can \n\
         be reclaimed and how many blobs the cache is managing.
+
+GET_CACHE_STATE = Gets the utilization and state information for all cache filesystems.
+
+GET_DATA_PATH_BACKEND = Gets configuration information about the data path backend.
+
+GET_SYSTEM_FAILURES = Get a list of all system failures.
+
+VERIFY_SYSTEM_HEALTH = Verifies that the system appears to be online and functioning \n \
+        normally and that there is adequate free space for the database file system.
+
+GET_CAPACITY_SUMMARY = Get a summary of the BlackPearl Deep Storage Gateway system-wide capacity.
+
+GET_CONFIG_SUMMARY = Runs multiple commands to capture configuration information.
