--- a/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
+++ b/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
@@ -201,3 +201,23 @@ GET_CAPACITY_SUMMARY = Get a summary of the BlackPearl Deep Storage Gateway syst
 GET_CONFIG_SUMMARY = Runs multiple commands to capture configuration information.
 
 VERIFY_ALL_TAPES = Verify the integrity of all the tapes in the black pearl.
+
+GET_FILTERED_OBJECTS = Filter an object list by size or creation date. \n\
+        Roturns one line for each object. \n\
+        Optional '-b' bucket_name \n\
+        Optional '--filter-params' to filter results.\n\
+        Use key:value pair key:value,key2:value2:... Legal values:\n\
+            newerthan, olderthan specify date from now in format d1.h2.m3.s4 (zero values can be omitted , separate with '.'\n\
+            largerthan, smallerthan object size in bytes \n\n\
+        Note: bucket will restrict values returned, filter-params will transfer (potentially large) object list \n\
+        and filter client-side.
+
+GET_FILTERED_OBJECTS_PHYSICAL = Get a list of objects on tape, filtered by size or creation date. \n\
+        Roturns one line for each instance on tape. \n\
+        Optional '-b' bucket_name \n\
+        Optional '--filter-params' to filter results.\n\
+        Use key:value pair key:value,key2:value2:... Legal values:\n\
+            newerthan, olderthan specify date from now in format d1.h2.m3.s4 (zero values can be omitted , separate with '.'\n\
+            largerthan, smallerthan object size in bytes \n\n\
+        Note: bucket will restrict values returned, filter-params will transfer (potentially large) object list \n\
+        and filter client-side.
