--- a/ds3_java_cli/build.gradle
+++ b/ds3_java_cli/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 
     )
     compile 'commons-cli:commons-cli:1.3.1'
+    compile group: 'org.apache.commons', name: 'commons-csv', version: '1.4'
     compile 'joda-time:joda-time:2.9.2'
     compile fileTree(dir: 'lib', include: '*.jar')
 }
