Updating the changed file name in the help.properties file

--- a/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
+++ b/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
@@ -202,7 +202,7 @@ GET_CONFIG_SUMMARY = Runs multiple commands to capture configuration information
 
 VERIFY_ALL_TAPES = Verify the integrity of all the tapes in the black pearl.
 
-GET_FILTERED_OBJECTS = Filter an object list by size or creation date. \n\
+GET_DETAILED_OBJECTS = Filter an object list by size or creation date. \n\
         Roturns one line for each object. \n\
         Optional '-b' bucket_name \n\
         Optional '--filter-params' to filter results.\n\
@@ -212,7 +212,7 @@ GET_FILTERED_OBJECTS = Filter an object list by size or creation date. \n\
         Note: bucket will restrict values returned, filter-params will transfer (potentially large) object list \n\
         and filter client-side.
 
-GET_FILTERED_OBJECTS_PHYSICAL = Get a list of objects on tape, filtered by size or creation date. \n\
+GET_DETAILED_OBJECTS_PHYSICAL = Get a list of objects on tape, filtered by size or creation date. \n\
         Roturns one line for each instance on tape. \n\
         Optional '-b' bucket_name \n\
         Optional '--filter-params' to filter results.\n\
