General code cleanup.

--- a/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
+++ b/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
@@ -17,7 +17,7 @@ GET_OBJECT = Retrieves a single object from a bucket.\n\
             Requires the '-b' parameter to specify bucket (name or UUID).\n\
             Requires the '-o' parameter to specify object (name or UUID).\n\
             Optional '-d' parameter to specify restore directory (default '.').\n\
-            Optional '--sync' flag to retrieve onnly newer or non-extant files.\n\
+            Optional '--sync' flag to retrieve only newer or non-extant files.\n\
             Optional '-nt' parameter to specify number of threads.\n\n\
             Use the get_service command to retrieve a list of buckets.\n\
             Use the get_bucket command to retrieve a list of objects.
@@ -203,7 +203,7 @@ GET_CONFIG_SUMMARY = Runs multiple commands to capture configuration information
 VERIFY_ALL_TAPES = Verify the integrity of all the tapes in the black pearl.
 
 GET_DETAILED_OBJECTS = Filter an object list by size or creation date. \n\
-        Roturns one line for each object. \n\
+        Returns one line for each object. \n\
         Optional '-b' bucket_name \n\
         Optional '--filter-params' to filter results.\n\
         Use key:value pair key:value,key2:value2:... Legal values:\n\
@@ -213,7 +213,7 @@ GET_DETAILED_OBJECTS = Filter an object list by size or creation date. \n\
         and filter client-side.
 
 GET_DETAILED_OBJECTS_PHYSICAL = Get a list of objects on tape, filtered by size or creation date. \n\
-        Roturns one line for each instance on tape. \n\
+        Returns one line for each instance on tape. \n\
         Optional '-b' bucket_name \n\
         Optional '--filter-params' to filter results.\n\
         Use key:value pair key:value,key2:value2:... Legal values:\n\
