JAVACLI-109 Commands manage their own arguments

--- a/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
+++ b/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
@@ -15,12 +15,7 @@
 
 GET_OBJECT = Retrieves a single object from a bucket.\n\
             Requires the '-b' parameter to specify bucket (name or UUID).\n\
-            Requires the '-o' parameter to specify object (name or UUID).\n\
-            Optional '-d' parameter to specify restore directory (default '.').\n\
-            Optional '--sync' flag to retrieve only newer or non-extant files.\n\
-            Optional '-nt' parameter to specify number of threads.\n\n\
-            Use the get_service command to retrieve a list of buckets.\n\
-            Use the get_bucket command to retrieve a list of objects.
+            Requires the '-o' parameter to specify object (name or UUID).
 
 GET_BUCKET = Returns a list of objects contained in a bucket.\n\
             Requires the '-b' parameter to specify bucket (name or UUID).\n\n\
@@ -32,13 +27,7 @@ PUT_BUCKET = Create a new empty bucket.\n\
 PUT_OBJECT = This is provided for Amazon S3 compatibility.\n\
         Spectra Logic recommends using Spectra S3 requests to create a PUT job.\n\
         Requires the '-b' parameter to specify bucket (name or UUID).\n\
-        Requires the '-o' parameter to specify local object name.\n\
-        Optional '-p' parameter (unless | ) to specify prefix or directory name.\n\
-        Optional '--sync' flag to put only newer or non-extant files.\n\
-        Optional '-nt' parameter to specify number of threads.\n\
-        Optional '--ignore-errors' flag to continue on errors.\n\
-        Optional '--follow-symlinks' flag to follow symlink (default is disregard).\n\
-        Optional '--metadata' parameter to add metadata (key:value,key2:value2).
+        Requires the '-o' parameter to specify local object name.
 
 DELETE_BUCKET = Deletes an empty bucket.\n\
         Requires the '-b' parameter to specify bucket (by name or UUID).\n\
@@ -52,27 +41,17 @@ DELETE_OBJECT = Permanently deletes an object.\n\
         Use the get_bucket command to retrieve a list of objects.
 
 GET_BULK = Retrieve multiple objects from a bucket.\n\
-        Requires the '-b' parameter to specify bucket (name or UUID).\n\
-        Optional '-d' parameter to specify restore directory (default '.').\n\
-        Optional '-p' parameter to specify prefix or directory name.\n\
-        Optional '--sync' flag to retrieve only newer or non-extant files.\n\
-        Optional '-nt' parameter to specify number of threads.
+        Requires the '-b' parameter to specify bucket (name or UUID).
 
 VERIFY_BULK_JOB = A verify job reads data from the permanent data store and verifies that the CRC of the data \n\
         read matches the expected CRC. Verify jobs ALWAYS read from the data store - even if the data \n\
         currently resides in cache.\n\
         Requires the '-b' parameter to specify bucket (name or UUID).\n\
-        Requires the '-o' parameter to specify object (name or UUID).\n\
-        Optional '-p' parameter to specify prefix or directory name.
+        Requires the '-o' parameter to specify object (name or UUID).
 
 PUT_BULK = Put multiple objects from a directory or pipe into a bucket.\n\
         Requires the '-b' parameter to specify bucket (name or UUID).\n\
-        Requires the '-d' parameter (unless | ) to specify source directory.\n\
-        Optional '-p' parameter (unless | ) to specify prefix or directory name.\n\
-        Optional '--sync' flag to put only newer or non-extant files.\n\
-        Optional '-nt' parameter to specify number of threads.\n\
-        Optional '--ignore-errors' flag to continue on errors.\n\
-        Optional '--follow-symlinks' flag to follow symlink (default is disregard).
+        Requires the '-d' parameter (unless | ) to specify source directory.
 
 DELETE_TAPE_DRIVE = Deletes the specified offline tape drive.\n\
         This request is useful when a tape drive is permanently removed from a partition.\n\
@@ -111,9 +90,7 @@ DELETE_FOLDER = Deletes a folder and all its contents.\n\
 
 PUT_JOB = Modify the priority or the start date of a job that is in process.\n\
         This also resets the heartbeat for the job, so that it does not timeout.\n\
-        Requires the '-i' parameter with the UUID of the job.\n\
-        Optional '--priority' parameter:\n\
-            CRITICAL | URGENT | HIGH | NORMAL | LOW | BACKGROUND
+        Requires the '-i' parameter with the UUID of the job.
 
 GET_TAPES = Returns a list of all tapes.
 
@@ -127,9 +104,8 @@ PERFORMANCE = For internal testing.\n\
         stream for get. Useful for testing network and system performance.\n\
         Requires the '-b' parameter with a unique bucketname to be used for the test.\n\
         Requires the '-n' parameter with the number of files to be used for the test.\n\
-        Requires the '-s' parameter with the size of each file in MB for the test.\n\
-        Optional '-bs' parameter with the buffer size in bytes (default 1MB).\n\
-        Optional '-nt' parameter with the number of threads.
+        Requires the '-s' parameter with the size of each file in MB for the test.
+
 
 GET_PHYSICAL_PLACEMENT = Returns the location of a single object on tape.\n\
         Requires the '-b' parameter to specify bucket (name or UUID).\n\
