--- a/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
+++ b/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
@@ -223,8 +223,8 @@ GET_DETAILED_OBJECTS_PHYSICAL = Get a list of objects on tape, filtered by size 
         and filter client-side.
 
 GET_STORAGE_DOMAINS = Get information about all storage domains.\n\
-        Optional -i (either UUID or name) restricts output to one storage domain\n\
-        Optional --writeOptimization (capacity | performance} filters results to those matching write optimization.
+        Optional -i (UUID or name) restricts output to one storage domain\n\
+        Optional --writeOptimization (capacity | performance) filters results to those matching write optimization.
 
 EJECT_STORAGE_DOMAIN = Ejects all eligible tapes within the specified storage domain.\n\
         Tapes are not eligible for ejection if mediaEjectionAllowed=FALSE for the storage domain.\n\
