Update help, remove Unit Test for Sync (Added to Integration)

--- a/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
+++ b/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
@@ -55,6 +55,7 @@ GET_BULK = Retrieve multiple objects from a bucket.\n\
         Requires the '-b' parameter to specify bucket (name or UUID).\n\
         Optional '-d' parameter to specify restore directory (default '.').\n\
         Optional '-p' parameter to specify prefix or directory name.\n\
+             Separate multiple values with commas\n\
         Optional '--sync' flag to retrieve only newer or non-extant files.\n\
         Optional '-nt' parameter to specify number of threads.
 
