(JAVACLI-130) Add Absolute dates to filter get_detailed_objects

--- a/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
+++ b/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
@@ -208,7 +208,10 @@ GET_DETAILED_OBJECTS = Filter an object list by size or creation date. \n\
         Optional '-b' bucket_name \n\
         Optional '--filter-params' to filter results.\n\
         Use key:value pair key:value,key2:value2:... Legal values:\n\
-            newerthan, olderthan specify date from now in format d1.h2.m3.s4 (zero values can be omitted , separate with '.'\n\
+            newerthan, olderthan specify relative date from now in format d1.h2.m3.s4 (zero values can be omitted , separate with '.')\n\
+            before, after specify absolute UTC date in format Y2016.M11.D9.h12 (zero values can be omitted , separate with '.')\n\
+            owner owner name\n\
+            contains string to match in object name \n\
             largerthan, smallerthan object size in bytes \n\n\
         Note: bucket will restrict values returned, filter-params will transfer (potentially large) object list \n\
         and filter client-side.
