--- a/ds3_java_cli/build.gradle
+++ b/ds3_java_cli/build.gradle
@@ -34,16 +34,18 @@ dependencies {
     compile fileTree(dir: 'lib', include: '*.jar')
 }
 
-task genConfigProperties << {
-    File configFile = new File(sourceSets.main.output.resourcesDir, "/ds3_cli.properties")
-    Path configPath = sourceSets.main.output.resourcesDir.toPath()
-    if (!Files.exists(configPath)) {
-        Files.createDirectories(configPath)
-    }
+task genConfigProperties {
+    doLast {
+        File configFile = new File(sourceSets.main.output.resourcesDir, "/ds3_cli.properties")
+        Path configPath = sourceSets.main.output.resourcesDir.toPath()
+        if (!Files.exists(configPath)) {
+            Files.createDirectories(configPath)
+        }
 
-    configFile.withWriter{out ->
-        out.writeLine("version="+version)
-        out.writeLine("build.date="+new Date().toString())
+        configFile.withWriter{out ->
+            out.writeLine("version="+version)
+            out.writeLine("build.date="+new Date().toString())
+        }
     }
 }
 
