Use just -b option on get_bucket_details. Pull CSV until more fully implemented.

--- a/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
+++ b/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
@@ -23,7 +23,7 @@ GET_OBJECT = Retrieves a single object from a bucket.\n\
             Use the get_bucket command to retrieve a list of objects.
 
 GET_BUCKET_DETAILS = Returns bucket details by either UUID or bucket name.\n\
-            Requires either the '-b' parameter to specify bucket name or -i UUID.\n\n\
+            Requires the '-b' parameter to specify bucket name or UUID.\n\n\
             Useful to get name by ID or ID by name.\n\
             Use the get_service command to retrieve a list of buckets.
 
