--- a/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
+++ b/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
@@ -28,7 +28,7 @@ GET_BUCKET_DETAILS = Returns bucket details by either UUID or bucket name.\n\
             Use the get_service command to retrieve a list of buckets.
 
 GET_BUCKET = Returns bucket details plus a list of objects contained.\n\
-            Requires either the '-b' parameter to specify bucket name or -i UUID.\n\n\
+            Requires the '-b' parameter to specify bucket name or UUID.\n\n\
             Use the get_service command to retrieve a list of buckets.
 
 PUT_BUCKET = Create a new empty bucket.\n\
