--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include 'ds3-cli-integration', 'ds3_java_cli'
+include 'ds3-cli-helpers', 'ds3-cli-integration', 'ds3-cli-certification', 'ds3_java_cli'
