--- a/build.gradle
+++ b/build.gradle
@@ -64,7 +64,8 @@ project(':ds3-cli-integration') {
 
 project(':ds3-cli-certification') {
     dependencies {
-        compile project(':ds3-cli-helpers')
+        compile project(':ds3_java_cli') // provides Ds3Cli Credentials
+        testCompile project(':ds3-cli-helpers')
         testCompile project(path: ':ds3-cli-helpers', configuration: 'testOutput')
     }
 }
