JAVACLI-156: Implement Eject Tape call

--- a/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
+++ b/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
@@ -244,6 +244,12 @@ EJECT_STORAGE_DOMAIN = Ejects all eligible tapes within the specified storage do
         Tapes are not eligible for ejection if mediaEjectionAllowed=FALSE for the storage domain.\n\
         If a tape is being used for a job, it is ejected once it is no longer in use.\n\n\
         Use the get_storage_domains command to retrieve a list of storage domains.
+
+EJECT_TAPE = Ejects tape uniquely identified by ID.\n\
+        Tapes are not eligible for ejection if mediaEjectionAllowed=FALSE for the storage domain.\n\
+        If a tape is being used for a job, it is ejected once it is no longer in use.\n\n\
+        Use the get_tapes command  or get_detailed_objects_physicsl to find tape id.
+
 GET_TAPE = Returns information on a single tape.\n\
         If the tape has been ejected, then the ejection information will also be displayed.\n\
         Required '-i' tape barcode or id
