Resolve merge conflicts

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 /*
  * ******************************************************************************
- *   Copyright 2014 Spectra Logic Corporation. All Rights Reserved.
+ *   Copyright 2014-2017 Spectra Logic Corporation. All Rights Reserved.
  *   Licensed under the Apache License, Version 2.0 (the "License"). You may not use
  *   this file except in compliance with the License. A copy of the License is located at
  *
@@ -37,7 +37,7 @@ subprojects {
         compile 'ch.qos.logback:logback-core:1.1.6'
         compile 'ch.qos.logback:logback-classic:1.1.6'
         compile 'com.google.guava:guava:19.0'
-        compile 'com.spectralogic.ds3:ds3-sdk:3.2.7'
+        compile 'com.spectralogic.ds3:ds3-sdk:3.2.10'
         testCompile ('org.mockito:mockito-core:1.10.19') {
             exclude group: 'org.hamcrest'
         }
@@ -64,7 +64,6 @@ project(':ds3-cli-integration') {
 
 project(':ds3-cli-certification') {
     dependencies {
-        compile project(':ds3_java_cli') // provides Ds3Cli Credentials
         compile project(':ds3-cli-helpers')
         testCompile project(':ds3-cli-helpers')
         testCompile project(path: ':ds3-cli-helpers', configuration: 'testOutput')
