JAVACLI-112,113,114,116: Add Cancel Verify of pools and tapes

--- a/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
+++ b/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
@@ -253,3 +253,19 @@ EJECT_TAPE = Ejects the tape uniquely identified by ID.\n\
 GET_TAPE = Returns information on a single tape.\n\
         If the tape has been ejected, then the ejection information will also be displayed.\n\
         Required '-i' tape barcode or id
+
+GET_POOL = Returns information on a single pool.\n\
+        Required '-i' pool name or id
+
+GET_POOLS = Returns all pools matching option filter criteria:
+
+CANCEL_VERIFY_ALL_TAPES = Cancel a previous request to verify all the tapes in the DS3 appliance.
+
+CANCEL_VERIFY_TAPE = Cancel a previous request to verify a tape in the DS3 appliance. \n\
+        Required '-i' tape id (barcode, name, UUID)
+
+CANCEL_VERIFY_ALL_POOLS = Cancel previous request to verify all the pools in the DS3 appliance.
+
+CANCEL_VERIFY_POOL = Cancel previous request to verify a pool in the DS3 appliance. \n\
+        Required '-i' pool id (name or UUID)
+
