JAVACLI-162: Implement recovery of put_bulk and get_bulk.

--- a/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
+++ b/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
@@ -253,3 +253,19 @@ EJECT_TAPE = Ejects the tape uniquely identified by ID.\n\
 GET_TAPE = Returns information on a single tape.\n\
         If the tape has been ejected, then the ejection information will also be displayed.\n\
         Required '-i' tape barcode or id
+
+RECOVER_GET_BULK = Recovers a get_bulk job.\n\
+        Requires the '-b' parameter to specify bucket (name or UUID).\n\
+        Requires the '-i" parameter with the UUID for the interrupted or failed job.\n\
+        Other parameters should match the original get_bulk. A get_bulk job \n\
+        will write the correct command line parameters to the console.\n\
+        For best results, copy those for use with the recovery command.
+
+RECOVER_PUT_BULK = Recovers a put_bulk job.\n\
+        Requires the '-b' parameter to specify bucket (name or UUID).\n\
+        Requires the '-d' parameter (unless | ) to specify source directory.\n\
+        Requires the '-i" parameter with the UUID for the interrupted or failed job.\n\
+        Other parameters should match the original put_bulk. A put_bulk job \n\
+        will write the correct command line parameters to the console.\n\
+        For best results, copy those for use with the recovery command.
+
