Chnage to JSON file based recovery

--- a/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
+++ b/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
@@ -257,17 +257,18 @@ GET_TAPE = Returns information on a single tape.\n\
 RECOVER_GET_BULK = Recovers a get_bulk job.\n\
         Requires the '-b' parameter to specify bucket (name or UUID).\n\
         Requires the '-i" parameter with the UUID for the interrupted or failed job.\n\
-        Other parameters should match the original get_bulk. A get_bulk job \n\
-        will write the correct command line parameters to the console.\n\
-        For best results, copy those for use with the recovery command.
+        Other parameters should match the original get_bulk.
 
 RECOVER_PUT_BULK = Recovers a put_bulk job.\n\
         Requires the '-b' parameter to specify bucket (name or UUID).\n\
         Requires the '-d' parameter (unless | ) to specify source directory.\n\
         Requires the '-i" parameter with the UUID for the interrupted or failed job.\n\
-        Other parameters should match the original put_bulk. A put_bulk job \n\
-        will write the correct command line parameters to the console.\n\
-        For best results, copy those for use with the recovery command.
+        Other parameters should match the original put_bulk.
+
+RECOVER = Recover a failed or iterrupted put_bulk or get_bulk job using recover files.\n\
+        Recover files are written to temp space on put_bulk and get_bulk.
+        Use this command to manage files or initiate a recovery with the '--recover' option
+
 GET_POOL = Returns information on a single pool.\n\
         Required '-i' pool name or id
 
