Fix for https://jira.spectralogic.com/browse/JAVACLI-169.  The logging channel used in bulk get was trying to read metadata from files that are not created whe you specify the --discard flag.

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ subprojects {
     apply plugin: 'maven'
     apply plugin: 'idea'
 
+    sourceCompatibility = JavaVersion.VERSION_1_7
+
     repositories {
         mavenCentral()
         jcenter()
