--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@
 
 
 allprojects {
-    version = '3.5.0-rc1'
+    version = '3.5.0'
     group = 'com.spectralogic'
 }
 
@@ -36,9 +36,9 @@ subprojects {
     }
 
     dependencies {
-        compile 'ch.qos.logback:logback-core:1.1.6'
-        compile 'ch.qos.logback:logback-classic:1.1.6'
-        compile 'com.google.guava:guava:19.0'
+        compile 'ch.qos.logback:logback-core:1.2.3'
+        compile 'ch.qos.logback:logback-classic:1.2.3'
+        compile 'com.google.guava:guava:23.0'
         compile 'com.spectralogic.ds3:ds3-sdk:3.5.2'
         testCompile ('org.mockito:mockito-core:1.10.19') {
             exclude group: 'org.hamcrest'
@@ -73,5 +73,5 @@ project(':ds3-cli-certification') {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '4.0.2'
+    gradleVersion = '4.1'
 }
