--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,8 @@ subprojects {
         compile 'ch.qos.logback:logback-classic:1.2.3'
         compile 'com.google.guava:guava:23.0'
         compile 'com.spectralogic.ds3:ds3-sdk:3.5.2'
+        compile 'com.google.inject:guice:4.1.0'
+
         testCompile ('org.mockito:mockito-core:1.10.19') {
             exclude group: 'org.hamcrest'
         }
