PutBulk is archiving file metadata.

--- a/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
+++ b/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
@@ -106,7 +106,7 @@ DELETE_JOB = Terminates and removes a current job.\n\
 SYSTEM_INFORMATION = Retrieves basic system information: software version, build, and system serial number.\n\
         Useful to test communication.
 
-HEAD_OBJECT = Returns metadata but does not retrieves an object from a bucket.\n\
+HEAD_OBJECT = Returns metadata but does not retrieve an object from a bucket.\n\
         Requires the '-b' parameter to specify bucket (name or UUID).\n\
         Requires the '-o' parameter to specify object (name or UUID).\n\
         Useful to determine if an object exists and you have permission to access it.
