--- a/build.gradle
+++ b/build.gradle
@@ -13,13 +13,26 @@
  * ****************************************************************************
  */
 
+buildscript {
+
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+
+    dependencies {
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.17.0'
+    }
+}
 
 allprojects {
-    version = '3.5.0'
+    version = '3.5.1'
     group = 'com.spectralogic'
 }
 
 subprojects {
+    apply plugin: 'com.github.ben-manes.versions'
     apply plugin: 'java'
     apply plugin: 'maven'
     apply plugin: 'idea'
@@ -38,9 +51,9 @@ subprojects {
     dependencies {
         compile 'ch.qos.logback:logback-core:1.2.3'
         compile 'ch.qos.logback:logback-classic:1.2.3'
-        compile 'com.google.guava:guava:23.0'
-        compile 'com.spectralogic.ds3:ds3-sdk:3.5.2'
-        compile 'com.google.inject:guice:4.1.0'
+        compile 'com.google.guava:guava:23.0-jre'
+        compile 'com.spectralogic.ds3:ds3-sdk:3.5.4'
+        compile 'com.google.inject:guice:4.2.0'
 
         testCompile ('org.mockito:mockito-core:1.10.19') {
             exclude group: 'org.hamcrest'
@@ -75,5 +88,5 @@ project(':ds3-cli-certification') {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '4.1'
+    gradleVersion = '4.7'
 }
