Adding a param to delete a specific version and all versions of an object

--- a/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
+++ b/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
@@ -54,7 +54,9 @@ DELETE_BUCKET = Deletes an empty bucket.\n\
 
 DELETE_OBJECT = Permanently deletes an object.\n\
         Requires the '-b' parameter to specify bucketname.\n\
-        Requires the '-i' parameter to specify object name (UUID or name).\n\n\
+        Requires the '-o' parameter to specify objectname.\n\
+        Optional '--version-id' specific version (UUID) of an object to delete.\n\
+        Optional '--all-versions' deletes all of the versions for an object.  If `version-id` is also specified, it is ignored.\n\n\
         Use the get_service command to retrieve a list of buckets.\n\
         Use the get_bucket command to retrieve a list of objects.
 
