Added a new command to list the versions of a specific object

--- a/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
+++ b/ds3_java_cli/src/main/resources/com/spectralogic/dscli/help.properties
@@ -286,3 +286,6 @@ CANCEL_VERIFY_ALL_POOLS = Cancel previous request to verify all the pools in the
 CANCEL_VERIFY_POOL = Cancel previous request to verify a pool in the DS3 appliance. \n\
         Required '-i' pool id (name or UUID)
 
+GET_OBJECT_VERSIONS = Lists the all the versions of an object. \n\
+        Requires the '-b' parameter to specify bucket (name or UUID).\n\
+        Requires the '-o' parameter to specify object (name or UUID).
